--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,29 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: 'obscure-password'
+      POSTGRES_USER: 'obscure-user'
+      POSTGRES_DB: 'app'
+      PGDATA: '/var/lib/postgresql/data/pgdata'
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    ports:
+      - '5432:5432'
 
   express:
     labels:
       shipyard.route: '/'
     build:
       context: .
+    depends_on:
+      - postgres
     ports:
       - '3000:3000'
     volumes:
       - "./src:/app/src"
+
+volumes:
+  postgres:
