--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres
+    image: 'postgres:13.0-alpine'
     environment:
       POSTGRES_PASSWORD: 'obscure-password'
       POSTGRES_USER: 'obscure-user'
       POSTGRES_DB: 'app'
       PGDATA: '/var/lib/postgresql/data/pgdata'
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - 'postgres:/var/lib/postgresql/data'
     ports:
       - '5432:5432'
 
@@ -19,11 +19,11 @@ services:
     build:
       context: .
     depends_on:
-      - postgres
+      - 'postgres'
     ports:
       - '3000:3000'
     volumes:
-      - "./src:/app/src"
+      - './src:/app/src'
 
 volumes:
   postgres:
