--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "pg": "^8.4.2"
+    "pg": "^8.4.2",
+    "pug": "2.0.0-beta11"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
