Add migration command to express service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   express:
     labels:
+      shipyard.before: 'npx sequelize-cli db:migrate'
       shipyard.route: '/'
     build:
       context: .
