--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# OS X
+.DS_Store*
+Icon?
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+.directory
+*~
+
+
+# npm
 node_modules
 package-lock.json
 *.log
